--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+APScheduler==3.10.4
 certifi==2023.7.22
 charset-normalizer==3.3.1
 idna==3.4
 paho-mqtt==1.6.1
+pytz==2023.3.post1
 requests==2.31.0
+six==1.16.0
+tzlocal==5.2
 urllib3==1.26.6
